--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,111 @@
-# PyTorch (CUDA 12.8)
+############################################################
+# Torch + PyG custom wheels (CUDA 12.8, Torch 2.8.0)
+############################################################
+--find-links https://data.pyg.org/whl/torch-2.8.0+cu128.html
+
 torch==2.8.0
 torchvision==0.23.0
 torchaudio==2.8.0
 
-# PyTorch Geometric
+pyg-lib
+torch-scatter
+torch-sparse
+torch-cluster
+torch-spline-conv
 torch-geometric==2.6.1
 
-# DIG (Dive into Graphs) - para SubgraphX
-dive-into-graphs
 
-# Dependências comuns
-networkx>=3.2
-matplotlib>=3.8
-numpy>=1.26
-scipy>=1.12
-pandas>=2.2
+############################################################
+# Restante dos pacotes instalados no seu ambiente
+############################################################
 
-# Extras (se precisar)
-scikit-learn>=1.0
-tqdm>=4.60
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+antlr4-python3-runtime==4.9.3
+asttokens==3.0.1
+attrs==25.4.0
+beautifulsoup4==4.14.2
+captum==0.2.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+cilog==1.3.0
+cloudpickle==3.1.2
+contourpy==1.3.3
+cycler==0.12.1
+decorator==5.2.1
+dive-into-graphs==1.1.0
+et_xmlfile==2.0.0
+executing==2.2.1
+filelock==3.20.0
+fonttools==4.60.1
+frozenlist==1.8.0
+fsspec==2025.10.0
+gdown==5.2.0
+h5py==3.15.1
+hydra-core==1.3.2
+idna==3.11
+ipython==9.7.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.2
+kiwisolver==1.4.9
+llvmlite==0.45.1
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+matplotlib-inline==0.2.1
+more-itertools==10.8.0
+mpmath==1.3.0
+multidict==6.7.0
+munch==4.0.0
+mypy_extensions==1.1.0
+networkx==3.5
+numba==0.62.1
+numpy==1.26.4
+omegaconf==2.3.0
+openpyxl==3.1.5
+packaging==25.0
+pandas==2.3.3
+parso==0.8.5
+pexpect==4.9.0
+pillow==12.0.0
+pip==25.3
+prompt_toolkit==3.0.52
+propcache==0.4.1
+psutil==7.1.3
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyg-lib==0.5.0+pt28cu128
+Pygments==2.19.2
+pyparsing==3.2.5
+pyscf==2.11.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.3
+rdkit-pypi==2022.9.5
+requests==2.32.5
+scikit-learn==1.7.2
+scipy==1.16.3
+seaborn==0.13.2
+setuptools==80.9.0
+shap==0.50.0
+six==1.17.0
+slicer==0.0.8
+soupsieve==2.8
+stack-data==0.6.3
+sympy==1.14.0
+tabulate==0.9.0
+threadpoolctl==3.6.0
+tqdm==4.67.1
+traitlets==5.14.3
+triton==3.4.0
+typed-argument-parser==1.7.2
+typing_extensions==4.15.0
+typing-inspect==0.9.0
+tzdata==2025.2
+urllib3==2.5.0
+wcwidth==0.2.14
+wheel==0.45.1
+yarl==1.22.0
